--- a/style.css
+++ b/style.css
@@ -10,9 +10,25 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #f8f8f8;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 canvas {
     transform: scale(0.8);
     box-shadow: 0 0 2rem #666;
     border-radius: 2rem;
+}
+#control {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    background-color: #ffffffdd;
+    z-index: 1;
+    padding: 1rem;
+}
+fieldset {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
